added file reader and sample level

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     </head>
 
     <body>
+        <input type="file" id="fileinput"/>
         <canvas id="canvas" width="500" height="500"/>
         <script src="js/script.js"></script>
     </body>
